--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1 {
 
 p {
     margin-left: 20%;
+    margin-right: 20%;
     color: rgb(49, 211, 28);
 
 }
@@ -17,4 +18,10 @@ img {
     margin-bottom: 0%;
     margin-right: 20%;
     margin-left: 20%;
+
+}
+
+.press-button {
+    text-decoration: none;
+    background-color: rgb(98, 0, 255);
 }
