--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ h1 {
 
 }
 
+
+
 .Collecting-Fund {
     text-decoration: none;
     background-color: rgba(12, 93, 199, 0.74);
@@ -13,4 +15,21 @@ h1 {
     font-weight: 700;
     border-radius: 5px;
     margin-left: 45%;
+}
+
+.selection-first {
+    margin-top: 50px;
+}
+
+.first-fund {
+    width: 200px;
+    height: 100px;
+    border: 2px solid rgb(12, 10, 143);
+    text-align: center;
+    font-size: 200%;
+    border-radius: 10px;
+}
+
+.selection-first {
+    display: flex;
 }
