--- a/style.css
+++ b/style.css
@@ -17,9 +17,6 @@ h1 {
     margin-left: 45%;
 }
 
-.selection-first {
-    margin-top: 50px;
-}
 
 .first-fund {
     width: 200px;
@@ -28,8 +25,14 @@ h1 {
     text-align: center;
     font-size: 200%;
     border-radius: 10px;
+
 }
 
-.selection-first {
+.Choose-Option {
     display: flex;
+    justify-content: space-evenly;
+}
+
+.link-button {
+    text-decoration: none;
 }
